fix-bug: add new style for cart-total-price-box :: align-items: flex-end;

--- a/src/css/layout/body-cart.css
+++ b/src/css/layout/body-cart.css
@@ -149,6 +149,7 @@ body {
   padding: 14px 18px;
   display: flex;
   justify-content: space-between;
+  align-items: flex-end;
   margin-bottom: 30px;
 }
 
